--- a/inbx.env.example
+++ b/inbx.env.example
@@ -1,8 +1,12 @@
 # Copy to /etc/default/inbx and edit.
 
-# Required for read auth
+# Viewer auth user
 INBX_USER=inbx
-INBX_PASS=change-this-password
+
+# Optional viewer auth password.
+# If unset, the app generates one on first start, stores it in the storage
+# directory, and logs it once to journald.
+# INBX_PASS=change-this-password
 
 # Optional fixed token for POST /inbx.
 # If unset, the app auto-generates a token on first start and stores it in
