Use plain unix socket instead of systemd fd

--- a/inbx.env.example
+++ b/inbx.env.example
@@ -24,5 +24,5 @@ INBX_MAX_ENTRIES=100
 INBX_SECRET=change-this-secret
 
 # Listener URL for hypnotoad.
-# Default from the unit uses systemd socket activation:
-# MOJO_LISTEN=http://127.0.0.1?fd=3
+# Default from the unit uses a unix socket:
+# MOJO_LISTEN=http+unix://%2Frun%2Finbx%2Finbx.sock
