--- a/inbx.service
+++ b/inbx.service
@@ -1,17 +1,20 @@
 [Unit]
 Description=inbx Mojolicious inbox
-After=network.target inbx.socket
-Requires=inbx.socket
+After=network.target
 
 [Service]
 Type=simple
 DynamicUser=yes
+Group=www-data
+SupplementaryGroups=www-data
+RuntimeDirectory=inbx
+RuntimeDirectoryMode=0770
 StateDirectory=inbx
 StateDirectoryMode=0700
-UMask=0077
+UMask=0007
 WorkingDirectory=/opt/inbx
 Environment=INBX_STORAGE_PATH=%S/inbx
-Environment=MOJO_LISTEN=http://127.0.0.1?fd=3
+Environment=MOJO_LISTEN=http+unix://%2Frun%2Finbx%2Finbx.sock
 EnvironmentFile=-/etc/default/inbx
 ExecStart=/usr/bin/hypnotoad -f /opt/inbx/inbx.pl
 Restart=on-failure
@@ -38,3 +41,6 @@ LockPersonality=yes
 SystemCallArchitectures=native
 RestrictAddressFamilies=AF_UNIX
 SystemCallFilter=@system-service
+
+[Install]
+WantedBy=multi-user.target
