fix systemd percent escaping, and clean up

--- a/inbx.env.example
+++ b/inbx.env.example
@@ -23,6 +23,6 @@ INBX_MAX_ENTRIES=100
 # Optional app secret (used by Mojolicious internals)
 INBX_SECRET=change-this-secret
 
-# Listener URL for hypnotoad.
-# Default from the unit uses a unix socket:
-# MOJO_LISTEN=http+unix://%2Frun%2Finbx%2Finbx.sock
+# Listener URL for hypnotoad:
+# leave this unset and use the unit default.
+# (If you override in systemd unit files, remember '%' must be escaped as '%%'.)
